[package]
name = "rebytes"
version = "0.1.0"
edition = "2021"
description = "A Vec<u8>-like Buffer type that uses a simple in-process allocator."
license = "MIT OR Apache-2.0"
keywords = ["allocator", "bytes"]
categories = ["memory-management"]
readme = "./README.md"
repository = "https://github.com/khonsulabs/rebytes"

[dependencies]
parking_lot = "0.12.1"

[[bench]]
name = "benches"
harness = false

[dev-dependencies]
criterion = { version = "0.3.6", features = ["html_reports"] }

[profile.bench]
lto = true
